# bazel-flyway-demo

./: .gitignore  BUILD.bazel  WORKSPACE  pom.xml
.github/workflows/: main.yml
sqls/: V1__init.sql
src/test/java/: BUILD.bazel
src/test/java/codes/showme/flyway/: MainTest.java
